staging/src/k8s.io/api/testdata/v1.20.0/admissionregistration.k8s.io.v1.ValidatingWebhookConfiguration.json
{
  "kind": "ValidatingWebhookConfiguration",
  "apiVersion": "admissionregistration.k8s.io/v1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "namespace": "4",
    "selfLink": "5",
    "uid": "7",
    "resourceVersion": "11042405498087606203",
    "generation": 8071137005907523419,
    "creationTimestamp": null,
    "deletionGracePeriodSeconds": -4955867275792137171,
    "labels": {
      "7": "8"
    },
    "annotations": {
      "9": "10"
    },
    "ownerReferences": [
      {
        "apiVersion": "11",
        "kind": "12",
        "name": "13",
        "uid": "Dz廔ȇ{sŊƏp",
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "14"
    ],
    "clusterName": "15",
    "managedFields": [
      {
        "manager": "16",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "17",
        "fieldsType": "18"
      }
    ]
  },
  "webhooks": [
    {
      "name": "19",
      "clientConfig": {
        "url": "20",
        "service": {
          "namespace": "21",
          "name": "22",
          "path": "23",
          "port": -1971381490
        },
        "caBundle": "IQ=="
      },
      "rules": [
        {
          "operations": [
            "8衍`Ĩɘ.蘯"
          ],
          "apiGroups": [
            "24"
          ],
          "apiVersions": [
            "25"
          ],
          "resources": [
            "26"
          ],
          "scope": "昍řČ扷5ƗǸƢ6/"
        }
      ],
      "failurePolicy": "VŚ(ĿȊ甞谐颋",
      "matchPolicy": "SǡƏ",
      "namespaceSelector": {
        "matchLabels": {
          "2.1.L.l-Y._.-44..d.__Gg8-2_kS91.e5K-_e63_-_3-n-_-__3u-.J": "G_.7U-Uo_4_-D7r__.am64"
        },
        "matchExpressions": [
          {
            "key": "2.-__E_Sv__26KX_R_.-.Nth._--S_4DA_-5_-4lQ42M--n1-5",
            "operator": "In",
            "values": [
              "Ou1.m_.5AW-_S-.3g.7_2fNc5-_.-RX8"
            ]
          }
        ]
      },
      "objectSelector": {
        "matchLabels": {
          "7p_w.e6._.pj5t_k-_v.-6b6.N_-u.---.8-L": "k-U.v.4"
        },
        "matchExpressions": [
          {
            "key": "35--5ht-a-29--0qso79yg--79-e-a74bc-v--0jjy45-17-05-3z-4838/3-H2._67yg-Ln-__.-__2--z.t2w",
            "operator": "Exists"
          }
        ]
      },
      "sideEffects": "Ɵ)Ù",
      "timeoutSeconds": 1132918207,
      "admissionReviewVersions": [
        "39"
      ]
    }
  ]
}
